<resources>
    <string name="app_name">CST2335FinalGroupProject</string>
    <string name="show">Show my favourite game list</string>
    <string name="cst2335_final_project">CST2335 Final Project</string>

    <string name="soc_saveAsFav">save as favorite</string>

    <string name="geo_data_source">Geo Data Source</string>
    <string name="soccer_match_highlights">Soccer Match Highlights</string>
    <string name="song_lyrics_search">Song Lyrics Search</string>
    <string name="deezer_song_search">Deezer song search</string>

    <!-- String used in Song Lyrics Search -->
    <string name="lyric_artistText">Artist of the Song</string>
    <string name="lyric_artistHint">Enter artist here. ex.: police</string>
    <string name="lyric_titleText">Title of the Song</string>
    <string name="lyric_titleHint">Enter title here, ex.: roxanne</string>
    <string name="lyric_search_history">Search History</string>
    <string name="lyric_search_button">Search Lyrics</string>
    <string name="lyric_goto_fav_button">Go to Fav List</string>
    <string name="lyric_add_fav_button">Add to Fav</string>
    <string name="lyric_google_button">Google the Song</string>
    <string name="lyric_back_to_front_button">Go back to Search</string>
    <string name="lyric_fav_hide_button">HIDE</string>
    <string name="lyric_toolbar_goto_cityfinder">City Finder</string>
    <string name="lyric_toolbar_goto_soccer">Soccer Highlight</string>
    <string name="lyric_toolbar_goto_deezer">Deezer</string>
    <string name="lyric_toolbar_overflow">About this project</string>
    <string name="lyric_navigation_help">Instructions for this app</string>
    <string name="lyric_navigation_api">About the API</string>
    <string name="lyric_navigation_donate">Donate to Project</string>
    <string name="lyric_navigation_open">Open</string>
    <string name="lyric_navigation_close">Close</string>
    <string name="lyric_navagation_help_title">How to use</string>
    <string name="lyric_navagation_help_search">
        Type in the artist and title of song that you want to search, then click "Search Lyrics" button.
        \nAccess the Favorite Song list by click "Go to Fav List" button.
    </string>
    <string name="lyric_navagation_help_show">
        You can add a song to the Favorite List by clicking the "Add to Fav" button.
        \nSearch the song by Google after clicking the "Google the Song" button.
    </string>
    <string name="lyric_navagation_help_fav">
        click the song will display the lyric, long click will delete item from Favorite List
        \nIf you want to go back to the Search page, click the "Go back to Search" button
    </string>
    <string name="lyric_navigation_donate_title">Please give generou$ly</string>
    <string name="lyric_navigation_donate_number">How much money do you want to donate?</string>
    <string name="lyric_navigation_header">CST2335\tFinal Group Project\nSong Lyrics Search\nAuthor: Eric Wu\nVersion: 1.0</string>

    <!-- String used in GeoData-->
    <string name="latitudeText">Latitude</string>
    <string name="latitudeHint">Enter the latitude value like 45.4215</string>
    <string name="longitudeText">Longitude</string>
    <string name="longitudeHint">Enter the longitude value like -75.6972</string>
    <string name="searchGeo">Search nearby cities</string>
    <string name="favoriteGeo">Saved cities</string>
    <string name="geo_toast_message">City is saved!</string>
    <string name="geo_title_saved_cities">Saved cities</string>
    <string name="geo_show_in_google_map">Show in Google Map</string>
    <string name="geo_save_to_favorite">Save to Favorite</string>
    <string name="geo_yes">yes</string>
    <string name="geo_no">no</string>
    <string name="geo_remove_alert">Do you want to remove </string>
    <string name="geo_remove_success">Removed successfully </string>
    <string name="geo_menu_about">This is the find city project using Geo api, written by Xu Jiang</string>
    <string name="invalid_geo_search">The latitude and longitude information provided is invalid! </string>
    <string name="about_geo_api">About Geo Find City API </string>
    <string name="donate_to_geo">Donate</string>
    <string name="find_city_by_geo_api">Find City by Geo</string>
    <string name="author_xu_jiang">Author: Xu Jiang</string>
    <string name="geo_navigation_open">Open</string>
    <string name="geo_navigation_close">Close</string>
    <string name="geo_instruction">Input the latitude and longitude value into the box and search for the nearby city. After that, you can save the city or find the city in google map</string>


    <!-- strings used by deezer song search -->
    <string name="deezer_album_cover">Album Cover</string>
    <string name="deezer_activity_title_song_detail">Song Detail</string>
    <string name="deezer_song_name_template">Song Name: %s</string>
    <string name="deezer_duration_template">Duration: %s</string>
    <string name="deezer_album_name_template">Album Name: %s</string>
    <string name="deezer_activity_title_deezer_song_search">Search a song(Deezer)</string>
    <string name="deezer_dialog_title_alert">Alert</string>
    <string name="deezer_dialog_msg_enter_artist_name">Please enter the artist name.</string>
    <string name="deezer_search_song_of_artist_template">Search songs of artist %s</string>
    <string name="deezer_retrieved_songs_template">Retrieved %d songs</string>
    <string name="deezer_search">Search</string>
    <string name="deezer_enter_artist_name">Enter artist name</string>
    <string name="deezer_dialog_msg_no_artist_found">No artist found.\nPlease check the search text and try again.</string>
    <string name="deezer_navigation_open">Open</string>
    <string name="deezer_navigation_close">Close</string>
    <string name="deezer_song_search_by_deezer_api">Song Search by Deezer api</string>
    <string name="deezer_author_xingming_li">Author: Xingming Li</string>
    <string name="deezer_version_1_0">Version: 1.0</string>
    <string name="deezer_about_deezer_api">About Deezer API</string>
    <string name="deezer_donate_to_deezer">Donate to Deezer</string>
    <string name="deezer_usage_short">Enter artist name to search songs</string>
    <string name="deezer_btn_donate_text">Donate</string>
    <string name="deezer_my_favorite_song">My Favorite Song</string>
    <string name="deezer_add_to_favorite">Add to favorite</string>
    <string name="deezer_remove_from_favorite">Remove from favorite</string>
    <string name="deezer_remove_success">"Removed successfully. "</string>
    <string name="deezer_failed_to_remove">Failed to remove.</string>
    <string name="deezer_save_success">Saved successfully.</string>
    <string name="deezer_failed_to_save">Failed to save.</string>
    <string name="deezer_go">Go to favorite list</string>
    <string name="deezer_confirm">Confirm</string>
    <string name="deezer_yes">Yes</string>
    <string name="deezer_no">No</string>
    <string name="deezer_remove_song_confirm">Would you like to remove this song from your favorite list?</string>


    <!-- strings used by soccer match highlights -->
    <string name="soccer_alert_title">You selected game:  </string>
    <string name="soccer_alert_msg">Do you want to go to game details?</string>
    <string name="soccer_postive">Yes</string>
    <string name="soccer_toast_txt">you are going to detail page</string>
    <string name="soccer_negative">No</string>
    <string name="soccer_snackbar_msg">you are going to stay on this page</string>
    <string name="soccer_dateTXT">Game date:</string>
    <string name="soc_gohome">Go to the game list</string>
    <string name="soc_goFav">Go to my favorite game list</string>
    <string name="soccer_neu">Remove from favorite list</string>
    <string name="soc_delete_msg">Delete successfully</string>
    <string name="soc_gowatchLive">watch video</string>
    <string name="soc_click_to_watch">Click image to watch the game</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="menuTxt">About this project</string>
    <string name="geo_toolbar">geotoolbar</string>
    <string name="songLyrics_toolbar_str">songLyrics_toolbar</string>
    <string name="deezer_toolbar_str">\"\"</string>
    <string name="soc_tbar_msg">This is the SoccerMatchHight activity, written byZiyue Wang</string>
    <string name="soc_version_nav">Version 1.0</string>
    <string name="soc_author_nav">Author: Ziyue Wang</string>
    <string name="Instructions_for_this_app">Instructions for this app</string>
    <string name="about_API">About the API</string>
    <string name="donate">Donate to Project</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="soc_instruction_title">"This is Soccer Match Hight activity. "</string>
    <string name="soc_intro_msg">You can click on the title to watch the game details, if you are interested in the game, you can also watch the game link, click on the save button to bookmark the game.</string>
    <string name="soc_intro_positive">got it</string>
    <string name="donate_alert_msg">Please give generously</string>
    <string name="donate_msg">How much money do you want to donate?</string>
    <string name="soc_removeBtn">Remove from the favorite list</string>
    <string name="soc_removeQue">Comfirm your deletion</string>
    <string name="soc_removeMsg">Are you sure you want to remove this record?</string>
    <string name="soc_removeToast">Delete successfully</string>
    <string name="help">Help</string>
    <string name="btn_cancel_text">Cancel</string>

</resources>