<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/lyric_navigation_help_item"
        android:text="@string/lyric_navigation_help"
        android:icon="@drawable/info"
        android:orderInCategory="1"
        android:title="@string/lyric_navigation_help" />

    <item
        android:id="@+id/lyric_navigation_api_item"
        android:text="@string/lyric_navigation_api"
        android:icon="@drawable/api"
        android:orderInCategory="2"
        android:title="@string/lyric_navigation_api" />

    <item
        android:id="@+id/lyric_navigation_donate_item"
        android:text="@string/lyric_navigation_donate"
        android:icon="@drawable/donation"
        android:orderInCategory="3"
        android:title="@string/lyric_navigation_donate" />
</menu>